2008-09-02  Vincent Untz  <vuntz@gnome.org>

	* clock-location-tile.c: (clock_location_tile_fill): improve tooltip of
	"Set" button
	Fix bug #550087

==================== 2.23.90.1 ====================

==================== 2.23.90 ====================

2008-08-06  Federico Mena Quintero  <federico@novell.com>

	https://bugzilla.novell.com/show_bug.cgi?id=414458 - When in
	12-hour mode, bringing up the clock window shows the location
	tiles in 24-hour format, but they get updated to 12-hour format at
	the next minute.

	* clock-location-tile.c (clock_location_tile_fill): Don't refresh
	the tile during creation (this gets called from
	clock_location_tile_new()), since the caller will not have had a
	chance to connect to the "need_clock_format" signal yet.

	* clock.c (create_cities_section): Refresh the location tile here,
	after connecting to its signals.

==================== 2.23.6 ====================

2008-08-04  Dan Winship  <danw@gnome.org>

	* clock.c: Use GWeatherLocationEntry and GWeatherTimezoneMenu in
	the add/edit location dialog. Remove all the old
	find-location-dialog code

	* clock.glade: Remove some old versions of dialogs, and update for
	new widgets

	* clock-country.c:
	* clock-zoneinfo.c:
	* clock-zonetable.c: Gone; GWeatherTimezone handles this now

	* Makefile.am (INCLUDES): remove refs to EVOLUTION_TEXTDOMAIN; we
	don't need to steal evolution's translations any more
	(CLOCK_SOURCES): remove stuff

==================== 2.23.5 ====================

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	* calendar-client.c: (get_ical_rid): don't strdup the value returned by
	icaltime_as_ical_string, we already own it (see bug #516408)
	(calendar_appointment_finalize): fix leak

2008-06-30  Vincent Untz  <vuntz@gnome.org>

	Use the right color for tasks and appointments.
	Patch by Sjoerd Simons <sjoerd@luon.net>
	Fix bug #503581

	* calendar-client.c: (get_source_color): use e_source_peek_color_spec()
	instead of deprecated e_source_get_color()